make-a-wish-salesforce/src/objects/Diagnosis_Verification__c.object
<CustomObject>
    <fields>
        <fullName>Block__c</fullName>
        <description>Used to hold the block value</description>
        <label>Block</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Condition_Description__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It holds the condition description</description>
        <label>Condition Description</label>
        <referenceTo>Condition_Description__c</referenceTo>
        <relationshipLabel>Diagnosis Verification</relationshipLabel>
        <relationshipName>Diagnosis_Verification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to hold the related contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Diagnosis Verification</relationshipLabel>
        <relationshipName>Diagnosis_Verification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Epilepsy_Value__c</fullName>
        <description>Holds the value for epilepsy picklist</description>
        <label>Epilepsy Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Eternal_Id__c</fullName>
        <description>Used for integration purpose</description>
        <externalId>true</externalId>
        <label>Eternal Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to identified whether the give ICD or Condition Description is Group1 record</description>
        <label>Group1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ICD_Code__c</fullName>
        <description>It holds the ICD Code</description>
        <label>ICD Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It holds the lead</description>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Diagnosis Verification</relationshipLabel>
        <relationshipName>Diagnosis_Verification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medical_Question_Answer__c</fullName>
        <description>It holds the Medical Question answers</description>
        <label>Medical Question Answer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It holds the medical question</description>
        <label>Medical Question</label>
        <referenceTo>Medical_Questions__c</referenceTo>
        <relationshipLabel>Diagnosis Verification</relationshipLabel>
        <relationshipName>Diagnosis_Verification</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <description>It holds the block number</description>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PCD_ICD__c</fullName>
        <description>It is used to hold the block input value is from ICD Code or Condition Description</description>
        <label>Hidden PCD-ICD</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Diagnosis__c</fullName>
        <description>It holds the primary diagnosis value</description>
        <label>Primary Diagnosis</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Need__c</fullName>
        <description>It holds the value for reason for wish need</description>
        <label>Reason for Need</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Short_Description__c</fullName>
        <description>Used to hold short description for condition description</description>
        <label>Short Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isEligible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determine whether the wish is eligible</description>
        <label>Hidden isEligible</label>
        <type>Checkbox</type>
    </fields>
    <label>Diagnosis Verification</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DV-{000}</displayFormat>
        <label>Diagnosis Verification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Diagnosis Verification</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>